--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-sdk": "^2.1231.0",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-colorpicker": "^3.4.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.18.2",
